--- a/src/App.css
+++ b/src/App.css
@@ -7,55 +7,47 @@
 
 body
 {
-    --bg-color: rgba( 255,255,255,.75 );
+    /*background-image: linear-gradient( 0deg, var( --bg-color ), var( --bg-color ) ), url( './img/pokepika2.png' ); */
+
+    margin: 0;
+    padding: 0;
     font-family: Poppins, sans-serif;
-    background-image: linear-gradient( 0deg, var( --bg-color ), var( --bg-color ) ), url( './img/pokepika2.png' );
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.backdrop{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.video-bg{
+    position: absolute;
+    top: 40%; 
+    left: 50%; 
+    transform: translate(-50%, -50%) scale(0.8); 
+    min-width: 100%;
+    min-height: 100%;
+    object-fit: cover;
+    z-index: -1;
 }
 
 .pokemonFinder
 {
     padding: 1rem;
     border-radius: 1rem;
+    position: relative;
+    z-index: 1;
+    background: rgba(255, 255, 255, 0.2);
+    max-height: 100vh;
+    overflow-y: auto;
 }
-
-/*
-    Pokemon type colors
-*/
-.type-normal { --color: #C2C2A1; }
-
-.type-flying { --color: #BAB0D5; }
-
-.type-ghost { --color: #735797; }
-
-.type-dark { --color: #333; }
-
-.type-steel { --color: #CCCCDE; }
-
-.type-ground { --color: #B1736C; }
-
-.type-poison { --color: #7C538C; }
-
-.type-grass { --color: #48D0B0; }
-
-.type-fire { --color: #FB6C6C; }
-
-.type-electric { --color: #FFD86F; }
-
-.type-fairy { --color: #f469a9; }
-
-.type-bug { --color: #C3CE75; }
-
-.type-fighting { --color: #d6b591; }
-
-.type-water { --color: #609FB5; }
-
-.type-psychic { --color: #9B7FA6; }
-
-.type-ice { --color: #7FCCEC; }
-
-.type-rock { --color: #a6aab6; }
-
-.type-dragon { --color: #F9BE00; }
 
 /*
     Background Pokeball decoration
@@ -97,55 +89,6 @@ body
     background-color: currentColor;
 }
 
-/*
-    Animations
-*/
-@keyframes spin
-{
-    from { transform: rotate( 0 ); }
-    to { transform: rotate( 360deg ); }
+.background-cover {
+    height: 100vh;
 }
-
-@keyframes pull-up-center
-{
-    from { transform: translateY( 50% ) translateX( -50% ); opacity: 0; }
-    to { transform: translateY( 0 ) translateX( -50% ); opacity: 1; }
-}
-
-@keyframes pull-down-center
-{
-    from { transform: translateY( 0 ) translateX( -50% ); opacity: 1; }
-    to { transform: translateY( 50% ) translateX( -50% ); opacity: 0; }
-}
-
-@keyframes pull-up
-{
-    from { transform: translateY( 10% ); opacity: 0; }
-    to { transform: translateY( 0 ); opacity: 1; }
-}
-
-@keyframes fade-in
-{
-    from { opacity: 0; }
-    to { opacity: 1; }
-}
-
-@keyframes fade-out
-{
-    from { opacity: 1; }
-    to { opacity: 0; }
-}
-
-@keyframes fill
-{
-    from { width: 0; }
-}
-/* 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
