--- a/src/components/Cards/card.css
+++ b/src/components/Cards/card.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 *{
-    padding:0;
-    margin:0;
+
     font-family: 'Roboto', sans-serif;
+    justify-content: center; /* Horizontally center content */
+    align-items: center; /* Vertically center content */
+    margin: 0;
 }
 
 .card-container
@@ -11,19 +13,25 @@
     padding: 3rem;
     height: 100%;
     cursor: pointer;
+
 }
 
 .card-wrapper {
     display: flex;
     flex-wrap: wrap;
-    gap: 2rem; /* Adjust the gap between cards */
+    gap: 2.2rem; /* Adjust the gap between cards */
     padding-right: 1.2rem;
     padding-left: 1.2rem;
+    margin: 0 auto;
+
+    max-width: 1200px; /* Set a maximum width for the cards */
+    width: 100%; /* Ensure it takes full available width */
+    padding: 0 1.2rem;
   }
 
 .card
 {
-    width: calc(50% - 1rem); 
+    width: calc(50% - 3rem); 
     background-color: var( --color );
     color: #FFF;
     box-shadow: 0 0 20px 0 var( --color );
@@ -60,7 +68,7 @@
     align-items: center;
     justify-content: flex-end;
     max-width: 100%;
-    max-height: 26rem;
+    max-height: 24rem;
 }
 
 .pokemon-image img {
@@ -122,9 +130,7 @@
 
 
 
-/*
-    Pokemon type colors
-*/
+/* Pokemon type card background colors */
 .type-normal { --color: #C2C2A1; }
 
 .type-flying { --color: #BAB0D5; }
