--- a/src/components/Heading/Heading.css
+++ b/src/components/Heading/Heading.css
@@ -1,7 +1,7 @@
 .heading-container {
     display: flex;
     align-items: center;
-    justify-content: center; /* Center items horizontally */
+    justify-content: center;
     
   }
   
@@ -10,8 +10,8 @@
   }
   
   .pokelogo {
-    max-width: 90%; /* Make the image responsive within the container */
-    height: auto; /* Maintain the image's aspect ratio */
+    max-width: 90;
+    height: auto; 
   }
 
   .lottie-animation {
@@ -19,7 +19,7 @@
     align-items: center;
   }
   
-  /* Optional: Set a maximum width for the Lottie animation */
+
   .lottie-animation .lottie-container {
-    max-width: 90%; /* Adjust the maximum width as needed */
+    max-width: 90%; 
   }
